-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.0
-
None
-
Kubuntu 19.10 x86_64
-
-
9dafc323b5a8a3234caed740863944f733683680 (qt-creator/qt-creator/4.12)
Clang code model diagnostic config not preserved across QtCreator restart. Steps to reproduce:
1. Start QtCreator, open Options -> C++ -> Code Model tab.
2. Click in Diagnostic Configuration name ("Checks for questionable constructs").
3. Click Copy... and enter a name for the new config.
4. In Clang Warnings, enter some compiler flags. For example, add -Wno-unused-parameter.
5. Click Ok, Apply, Ok to close Options. Wait for the code model to apply the new options.
6. Close QtCreator and start again.
7. Open Options -> C++ -> Code Model tab and look at Diagnostic Configuration. It reads "Checks for questionable constructs".
8. Click on the configuration name. In the opened dialog there is no config that was created before restart.
Note that this is a regression since 4.11.1, which does preserve diagnostic configs across restart.
- is duplicated by
-
QTCREATORBUG-24059 QtCreator is not remembering custom CLANG Code Model Diagnostic Configurations
-
- Closed
-